--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # change the followings to match your Github username and repo name
-baseurl: "/tailpages" # the name of your github repo
-url: "https://harrywang.github.io" # the url of your github pages
+baseurl: "/upgradate" # the name of your github repo
+url: "https://upgradate.github.io" # the url of your github pages
 
 # site information used in page title, meta data etc.
 title: "Tailpages: Tailwind + Github Pages"
