--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ show-nav-menu: true
 nav-menu:
 - text: About
   permalink: about
-- text: Bitcoin
-  permalink: bitcoin
+- text: SSL
+  permalink: SSL
 - text: Blog
   permalink: blog
 
